Cursos grid gaps added/fixed

--- a/css/main.css
+++ b/css/main.css
@@ -256,7 +256,8 @@ textarea {
 
 .container-cursos {
    display: grid;
-   grid-template-columns: 1fr 1fr 1fr 1fr;
+   grid-template-columns: 1fr 1fr 1fr;
+   gap: 2.5rem;
 }
 
 .cursos {
@@ -264,7 +265,6 @@ textarea {
    flex-direction: column;
    align-items: center;
    /* max-width: calc(100% / 4); */
-   padding: 1rem;
    background-color: chartreuse;
 }
 
